test/parsetest/invalid/simple_class.java
class Clazz {
    public int a = 0;

    while (a < 2)
            if (a == 0)
    a++;
}